# biz.dfch.AsdSte100Lookup

./: .gitignore  AsdSte100Lookup.spec  CONTRIBUTING.md  README.md  build.txt  funding.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  pylint.yml
ASD-STE100/v3/: corrections.txt
ASD-STE100/v3/txt/: ASD-STE100 - 0001.txt  ASD-STE100 - 0002.txt  ASD-STE100 - 0003.txt  ASD-STE100 - 0004.txt  ASD-STE100 - 0005.txt  ASD-STE100 - 0006.txt  ASD-STE100 - 0007.txt  ASD-STE100 - 0008.txt  ASD-STE100 - 0009.txt  ASD-STE100 - 0010.txt  ASD-STE100 - 0011.txt  ASD-STE100 - 0012.txt  ASD-STE100 - 0013.txt  ASD-STE100 - 0014.txt  ASD-STE100 - 0015.txt  ASD-STE100 - 0016.txt  ASD-STE100 - 0017.txt  ASD-STE100 - 0018.txt  ASD-STE100 - 0019.txt  ASD-STE100 - 0020.txt  ASD-STE100 - 0021.txt  ASD-STE100 - 0022.txt  ASD-STE100 - 0023.txt  ASD-STE100 - 0024.txt  ASD-STE100 - 0025.txt  ASD-STE100 - 0026.txt  ASD-STE100 - 0027.txt  ASD-STE100 - 0028.txt  ASD-STE100 - 0029.txt  ASD-STE100 - 0030.txt  ASD-STE100 - 0031.txt  ASD-STE100 - 0032.txt  ASD-STE100 - 0033.txt  ASD-STE100 - 0034.txt  ASD-STE100 - 0035.txt  ASD-STE100 - 0036.txt  ASD-STE100 - 0037.txt  ASD-STE100 - 0038.txt  ASD-STE100 - 0039.txt  ASD-STE100 - 0040.txt  (+236 more)
___archive/: Diagrams and Architecture.ipynb  ExtractingTextFromPdfs.ipynb  asd-ste100-tokens.tsv  example.plantuml  rules-schema.json  rules.json
src/: main.py
src/biz/: __main__.py
src/biz/dfch/: __init__.py
src/biz/dfch/asdste100lookup/: __init__.py  app.py  args.py  builtin_rules.py  category_command.py  colorizer.py  colouriser.py  column_index.py  command_base.py  constant.py  dictionary.json  dictionary_command.py  dictionary_files_parser.py  dictionary_info.py  dictionary_word.py  empty_command.py  erase_console_buffer_command.py  line_info.py  line_info_type.py  logging.conf  main_prompt.py  markdown_utils.py  rule.py  rule_command.py  rule_content_base.py  rule_content_type.py  rule_grouper.py  rule_render_type.py  rule_renderer.py  rule_technical_word_parser.py  rules.json  run.py  save_command.py  table_row.py  technical_word_category.py  technical_words.json  unknown_command.py  word.py  word_category.py  word_category_command.py  (+7 more)
src/biz/dfch/i18n/: i18n.py
tests/: __init__.py  logging.conf  test_copyright_year.py  test_copyright_year_line.py
tests/asdste100lookup/: __init__.py  test_app_module_import.py  test_unittest_framework.py
tests/asdste100lookup/grammar/: __init__.py  test_sentence_parser.py
(+23 files in other folders)
